# post-training-of-llms

./: .gitignore  README.md  main.py  pyproject.toml
01-code/: README.md
01-code/1.1-pytorch/: README.md
01-code/1.1-pytorch/01-quick_start/: quick_start.ipynb
01-code/1.1-pytorch/02-tensors/: tensors.ipynb
01-code/1.1-pytorch/03-datasets&dataloader/: data.ipynb
01-code/1.1-pytorch/04-neural_network/: neural_network.ipynb
01-code/1.1-pytorch/04-nn/: neural_network.ipynb
01-code/1.1-pytorch/05-autograd/: autograd.ipynb
01-code/1.1-pytorch/06-training/: training.ipynb
01-code/1.1-pytorch/07-CV/: cifar10.ipynb
01-code/1.1-pytorch/08-NLP/: name_classify.ipynb  name_generate.ipynb  translation.ipynb
01-code/1.10-wandb/: README.md
01-code/1.2-datasets/: README.md
01-code/1.2-huggingface/01-transformers/: basic_use.ipynb
01-code/1.3-transformers/: README.md
01-code/1.4-tokenizers/: README.md
01-code/1.5-peft/: README.md
01-code/1.6-bitsandbytes/: README.md
01-code/1.7-trl/: README.md
01-code/1.8-accelerate/: README.md
01-code/1.9-deepspeed/: README.md
02-paper/: README.md
02-paper/2.1-SFT/: README.md
02-paper/2.2-RL/: README.md
02-paper/2.3-Safety/: README.md
03-exercise/: README.md
03-exercise/3.1-datasets/: README.md
03-exercise/3.2-benchmarks/: README.md
03-exercise/3.3-projects/: README.md
final-project/: README.md
llm-course/chapter-1/: section-1.ipynb
llm-course/chapter-2/: 02-models.ipynb  03-tokenizers.ipynb  04-multiseq.ipynb
src/: optimizer.py
