[project]
name = "post-training-of-llms"
version = "0.1.0"
description = "Post-training of LLMs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
